# blood_dragon

./: Cargo.toml  README.md  blood_dragon.html
src/: alloc.rs  dragon.rs  game.rs  lib.rs  mod.rs  scenes.rs  stage.rs  utils.rs
src/assets/: img.rs  mod.rs
src/assets/img/: dragon_fall_01.rs  dragon_fly_01.rs  dragon_fly_02.rs  dragon_idle_01.rs  dragon_jump_01.rs  dragon_walk_01.rs  dragon_walk_02.rs  dragon_walk_03.rs  error.rs  image.mustache  item_fragment.rs  item_key.rs  png2dat.bat  tile_gate.rs  tile_gate_close.rs  tile_gate_open.rs  tile_needle.rs  tile_spring.rs  tile_wall.rs
src/assets/img/raw/: _template.edg  chara.clip  dragon.clip  error.clip  item_fragment.edg  item_key.edg  test.edg  tile.clip  tile_gate_close.edg  tile_gate_open.edg  tile_needle.edg  tile_spring.edg
