[package]
name = "cart"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
buddy-alloc = { version = "0.4.1", optional = true }
lazy_static = "1.5.0"
rustc-hash = "2.1.1"

[profile.release]
debug = false
opt-level = "z"
panic = "abort"
lto = true

[features]
# use `--no-default-features` or comment out next line to disable allocator
default = ["buddy-alloc"]
